[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f110_gym"
version = "0.3.0"
description = "F1TENTH Gym environment"
authors = [{name = "Hongrui Zheng", email = "billyzheng.bz@gmail.com"}]
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "scipy>=1.12.0",
    "numba>=0.59.0",
    "pyyaml>=6.0",
    "pyglet>=2.0,<2.1",
    "PyOpenGL>=3.1.7",
]

[project.urls]
Homepage = "https://f1tenth.org"

[tool.setuptools.packages.find]
where = ["gym"]
