<?xml version="1.0"?>
<package format="3">
  <name>my_f1tenth_bridge</name>
  <version>0.0.1</version>
  <description>Custom F1TENTH bridge package for ROS 2 Jazzy</description>

  <maintainer email="matin42854@email.com">Matin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>